k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tm-app                    
spec:
  replicas: 2                    
  selector:
    matchLabels:
      app: tm-app                 
  template:
    metadata:
      labels:
        app: tm-app
    spec:
      containers:
        - name: tm-app
          image: 512285571836.dkr.ecr.eu-west-2.amazonaws.com/tm-app:latest  
          ports:
            - containerPort: 80          
          resources:                       
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
