k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tm-app-svc                
spec:
  type: ClusterIP
  selector:
    app: tm-app                  
  ports:
    - protocol: TCP
      port: 80                    
      targetPort: 80
