k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tm-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod" 
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts: [eks.najiib.co.uk]    
      secretName: tm-app-tls       
  rules:
    - host: eks.najiib.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tm-app-svc   
                port:
                  number: 80
